--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://harithrajapaksha.github.io/Harith_Rajapaksha",
+  "homepage": "https://harithrajapaksha.github.io/Harith_Rajapaksha/",
   "name": "my-pothfoloioapp",
   "version": "0.1.0",
   "private": true,
